resources/css/sass/pages/_static.scss
@use '../abstracts' as *;

// Join

.spacer-static {
    margin-top: 70px;
}

.title {
    font-family: 'Helvetica Neue';
    font-size: 40px;
    text-align: center;
    margin: 70px 0 65px;
    text-transform: uppercase;
}

.summary {


    .summary-item {
        &.full {
            grid-column-start: 1;
            grid-column-end: 6;
        }
        h2 {
            position: relative;
            &.category{
                margin-top: 10px;
                margin-bottom: 20px !important;
                color: black !important;
                font-weight: normal !important;

                &.unknown{
                    margin-bottom: 10px !important;
                }
                .category-unknown{
                    color: $mid-gray !important;
                }
            }
            .diamond {
                display: block;
                width: 25px;
                height: 25px;
                transform: scaleX(1.4) rotate(45deg);

            }

            .number {
                position: absolute;
                top: 56%;
                font-weight: bold;
                left: 50%;
                transform: translate(-50%, -50%);

                &.white {
                    color: white;
                }

                &.unknown {
                    color: #949494;
                }
            }
        }
        .no-players{
            font-size: 17px !important;
            font-weight: normal !important;  
            color: $mid-gray; 
        }
    }
}


.join-wrapper {
    max-width: 1200px;
    margin: 0 auto 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;

    .join-text {
        font-size: 25px;
    }

    p a {
        text-decoration: none;
        color: $blue;

        &:hover {
            color: $red;
        }
    }

    .icons-wrapper {
        margin-top: 15px;
        display: flex;
        gap: 70px;

        a svg {
            height: 45px;
            .cls-1 {
                fill: #8f8f8f;
            }
        }

        a.viber:hover svg .cls-1 {
            fill: #7360f2;
        }

        a.WhatsApp:hover svg .cls-1 {
            fill: #25D366;
        }
    }
}

@media only screen and (max-width: 1200px) {
    .join-wrapper {
        padding-top: 170px;
        padding-inline: 20px;
    }
    .summary{
        padding-inline: 20px;
        .summary-item {
            &.full {
                grid-column-start: 1;
                grid-column-end: 1;
            }

            &.smaller-top-margin {
                margin-top: -42px;
            }
        }
    }

    .col{
        grid-template-columns: 100% !important;
    }
    .title {
        display: none;
    }
}

